# WhisperIME-Large

./: .gitignore  CHANGELOG.md  CLAUDE.md  PRIVACY_POLICY.md  README-JACK-FUTURE.md  README-JACK.md  README.md  TERMS_OF_USE.md  build.gradle  gradle.properties  local.properties  settings.gradle
app/: build.gradle
app/src/main/java/com/whispertflite/: DownloadActivity.java  MainActivity.java  WhisperInputMethodService.java  WhisperRecognitionService.java  WhisperRecognitionServiceSettingsActivity.java  WhisperRecognizeActivity.java
app/src/main/java/com/whispertflite/ui/components/: VUMeterView.java  VUMeterView.kt  VoiceComponents.kt
app/src/main/java/com/whispertflite/ui/ime/: WhisperImeService.kt
app/src/main/java/com/whispertflite/ui/onboarding/: OnboardingScreen.kt  OnboardingViewModel.kt
app/src/main/java/com/whispertflite/ui/privacy/: PrivacyConsentScreen.kt  PrivacyConsentViewModel.kt
app/src/main/java/com/whispertflite/ui/settings/: SettingsScreen.kt
app/src/main/java/com/whispertflite/ui/theme/: WhisperTheme.kt
app/src/main/java/com/whispertflite/utils/: Downloader.java
app/src/main/res/drawable/: ic_arrow_upward.xml  ic_language.xml  ic_queue.xml
app/src/main/res/layout/: ime_whisper_keyboard.xml  popup_language_selector.xml
core/: build.gradle
core/src/main/java/com/whispertflite/core/audio/: AudioEngine.kt
core/src/main/java/com/whispertflite/core/logging/: WhisperLogger.kt
native/: build.gradle
native/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
native/src/main/java/com/whispertflite/native/: WhisperNative.kt
(+9 files in other folders)
